force-app/main/default/objects/clariti__Payment__c/clariti__Payment__c.object-meta.xml
<CustomObject>
    <description>Payment is used to record the amount collected per payment method during the cart transaction</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>