force-app/main/default/objects/clariti__Payment__c/fields/clariti__Account__c.field-meta.xml
<CustomField>
    <fullName>clariti__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account that made the payment.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>