force-app/main/default/objects/clariti__Payment__c/fields/clariti__AllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__AllocatedAmount__c</fullName>
    <description>Amount tendered during the payment transaction.</description>
    <label>Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>