force-app/main/default/objects/clariti__Payment__c/fields/clariti__Cart__c.field-meta.xml
<CustomField>
    <fullName>clariti__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to cart associated to the the payment transaction.</description>
    <label>Cart</label>
    <referenceTo>clariti__Cart__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>