force-app/main/default/objects/clariti__Payment__c/fields/clariti__CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__CheckNumber__c</fullName>
    <label>Check Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>