force-app/main/default/objects/clariti__Payment__c/fields/clariti__DepositNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__DepositNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Number</label>
    <referenceTo>clariti__Deposit__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>