force-app/main/default/objects/clariti__Payment__c/fields/clariti__MerchantId__c.field-meta.xml
<CustomField>
    <fullName>clariti__MerchantId__c</fullName>
    <label>Merchant Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>