force-app/main/default/objects/clariti__Payment__c/fields/clariti__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>clariti__PaymentMethod__c</fullName>
    <description>Payment Method used to make the payment.</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>