force-app/main/default/objects/clariti__Payment__c/fields/clariti__RefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__RefundedAmount__c</fullName>
    <description>Amount that is refunded from the payment.</description>
    <label>Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>