force-app/main/default/objects/clariti__Payment__c/fields/clariti__RejectedAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__RejectedAmount__c</fullName>
    <description>Amount that is rejected from the payment.</description>
    <label>Rejected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>