force-app/main/default/objects/clariti__Payment__c/fields/clariti__Status__c.field-meta.xml
<CustomField>
    <fullName>clariti__Status__c</fullName>
    <description>Status of the payment transaction.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Partially Refunded</fullName>
            </value>
            <value>
                <fullName>Fully Refunded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>