force-app/main/default/objects/clariti__Payment__c/fields/clariti__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransactionDate__c</fullName>
    <description>Transaction date and time.</description>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>