force-app/main/default/objects/clariti__Payment__c/fields/clariti__Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>