force-app/main/default/objects/clariti__Payment__c/fields/clariti__UnallocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__UnallocatedAmount__c</fullName>
    <description>Amount that is not applied to any payable (fees/invoices/deposits).</description>
    <label>Account Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>