force-app/main/default/objects/clariti__Payment__c/fields/clariti__VoidNotes__c.field-meta.xml
<CustomField>
    <fullName>clariti__VoidNotes__c</fullName>
    <description>Documents payment void status</description>
    <label>Void Notes</label>
    <type>TextArea</type>
</CustomField>