force-app/main/default/objects/clariti__Payment__c/fields/clariti__VoidReason__c.field-meta.xml
<CustomField>
    <fullName>clariti__VoidReason__c</fullName>
    <description>Reason for voiding the payment.</description>
    <label>Void Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Sufficient Funds</fullName>
            </value>
            <value>
                <fullName>Credit Card Charge Back</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>