force-app/main/default/objects/clariti__Payment__c/validationRules/clariti__AllocationAmountMustNotExceedAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__AllocationAmountMustNotExceedAmount</fullName>
    <active>true</active>
    <description>Prevent Payment Allocation Amount to exceed Payment Amount</description>
    <errorConditionFormula>clariti__AllocatedAmount__c  &gt;  clariti__PaymentAmount__c</errorConditionFormula>
    <errorMessage>Allocation amount must be less than or equal to the Payment amount</errorMessage>
</ValidationRule>